# research-agent

./: .gitignore  AGENTS.md  AGENT_EPISODES.md  AGENT_EPISODES_PLAIN.md  AGENT_EPISODES_SLIDES.md  CLAUDE.md  FAILURE_MODES_CATALOG.md  HANDOFF.md  LESSONS_LEARNED.md  README.md  RESEARCH_PLAN.md  compound-engineering.local.md  main.py  pyproject.toml  requirements.txt  research_context.md
.github/: PULL_REQUEST_TEMPLATE.md
contexts/: pfe.md
docs/: relevance-scoring.md  workflow-templates.md
plans/: AGENT_NATIVE_PLAN.md  CYCLE_11_SEMAPHORE_FIX_PLAN.md  CYCLE_6_RELEVANCE_GATE_PLAN.md  CYCLE_7_SEARCH_QUALITY_PLAN.md  Pacific Flow Intelligence Agent — System Specification.md  SECURITY_REMEDIATION_PLAN.md  TEST_SUITE_PLAN.md  plan-query-decomposition.md
reports/: Bahia_Hotel_Cell_Service_Research.md  Batch_1_San_Diego_Competitors.md  Batch_2_SoCal_Luxury_Resorts.md  Batch_3_National_Peers.md  Batch_4_Independent_Comparables.md  Batch_5_Oscar_Former_Properties.md  Batch_6_Brand_Scan.md  Batch_7_Executive_Voices.md  Batch_8_Seasonal_Planning_Dark_Restart.md  Report_1_FINAL.md  Report_1_PFE_Summary.md  Report_1_Prompt_v2.1.md
research_agent/: __init__.py  agent.py  api_helpers.py  cascade.py  cli.py  context.py  context_result.py  coverage.py  critique.py  cycle_config.py  decompose.py  errors.py  evidence.py  extract.py  fetch.py  iterate.py  mcp_server.py  modes.py  query_validation.py  relevance.py  report_store.py  results.py  safe_io.py  sanitize.py  schema.py  search.py  skeptic.py  staleness.py  state.py  summarize.py  synthesize.py  token_budget.py
(+485 files in other folders)
