[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.18.0"
description = "CLI research agent that searches the web and generates structured markdown reports"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "httpcore>=1.0.5",
    "ddgs>=9.0.0",
    "tavily-python>=0.3.0",
    "trafilatura>=1.12.0",
    "readability-lxml>=0.8.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "fastmcp>=2.0,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
research-agent = "research_agent.cli:main"
research-agent-mcp = "research_agent.mcp_server:main"

[tool.setuptools.packages.find]
include = ["research_agent*"]
